[gd_scene load_steps=2 format=3 uid="uid://chhmxseam8mb6"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_7usrh"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -421.0
offset_top = -252.0
offset_right = 418.0
offset_bottom = 235.0
script = ExtResource("1_7usrh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/Music"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -484.0
offset_right = -56.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SFX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -484.0
offset_right = -56.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.389
one_shot = true

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
